maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:36: error: not found: value CompteurCases
          compteurCases = CompteurCases + 1
                          ^ShortestPathMaze:42: error: not found: value CompteurCases
          compteurCases = CompteurCases + 1
                          ^ShortestPathMaze:48: error: not found: value CompteurCases
          compteurCases = CompteurCases + 1
                          ^ShortestPathMaze:54: error: not found: value CompteurCases
          compteurCases = CompteurCases + 1
                          ^